--- a/packages/company/website/src/components/OurClients/index.module.scss
+++ b/packages/company/website/src/components/OurClients/index.module.scss
@@ -87,6 +87,7 @@
 
 .flex {
   margin-bottom: 0.5em;
+  color: $gray_2;
 }
 
 .customer__description {
